# slint-text-rendering-artifact-demo

./: Cargo.toml  README.md  slint-text-rendering-artifact-demo_0.1.0.bb
src/: main.rs
ui/: AppWindow.slint
