[package]
name = "slint-text-rendering-artifact-demo"
version = "0.1.0"
edition = "2021"
build = "build.rs"
repository = "https://github.com/kkettinger/slint-text-rendering-artifact-demo.git"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", branch = "master", features=["backend-qt", "backend-winit-wayland", "renderer-winit-femtovg", "renderer-winit-software", "renderer-winit-skia"] }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", branch = "master" }
